add --enable-native-access option to pom file